added a few more things to html

--- a/StudentBio.html
+++ b/StudentBio.html
@@ -16,7 +16,7 @@
         <br>
         <ul>
             <li><strong>Email: </strong> ajpatel@u.northwestern.edu</li>
-            <li><strong>Github: </strong> ayjaypnil</li>
+            <li><strong>Github: </strong> <a href="https://github.com/ayjaypnil" target="_blank">ayjaypnil</a></li>
             <li><strong>Portfolio:</strong> <em>coming soon</em></li>
         </ul>
     </body>
